tests/suite/fail/generated/types/fail_gt_bool_i32.ny
fn main() {
    let _ = true > 1 //~ ERROR type mismatch in `comparison` operation
}
